--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
     "react-test-renderer": "18.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "jest": {
