--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^4.0.12",
+    "@testing-library/react-native": "^11.1.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.70.0",
@@ -32,16 +34,5 @@
     "react-test-renderer": "18.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   }
 }
