--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint ./src --ext .ts,.tsx --fix",
+    "prettify": "prettier --write ./src",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "18.1.0",
@@ -29,10 +31,19 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "husky": "^8.0.1",
     "jest": "^26.6.3",
+    "lint-staged": "^13.0.3",
     "metro-react-native-babel-preset": "^0.72.1",
     "react-test-renderer": "18.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "yarn test --findRelatedTests --watchAll=false",
+      "yarn lint",
+      "yarn prettify"
+    ]
   }
 }
