--- a/package.json
+++ b/package.json
@@ -12,8 +12,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "18.1.0",
-    "react-native": "0.70.1"
+    "react-native": "0.70.1",
+    "react-native-gesture-handler": "^2.6.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.3.4",
+    "react-native-screens": "^3.17.0",
+    "react-native-toast-message": "^2.1.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -27,6 +40,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
+    "axios-mock-adapter": "^1.21.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
